[gd_scene load_steps=2 format=3 uid="uid://dv8rcbsi4s86d"]

[ext_resource type="Script" uid="uid://bfkoykxommby0" path="res://scenes_and_scripts/death_screen.gd" id="1_hi5ci"]

[node name="DeathScreen" type="CanvasLayer" groups=["death_ui"]]
script = ExtResource("1_hi5ci")

[node name="FadeOverlay" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0, 0, 0, 0.0392157)

[node name="DeathText" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -40.0
offset_right = 34.5
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(35, 12)
text = "You Died"

[node name="MenuButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = 10.0
offset_right = 65.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(65, 16)
text = "Return to Menu"
